--- a/index.html
+++ b/index.html
@@ -67,9 +67,8 @@
     <div class="container">
    		<h3>PROGRAMAÇÃO WEB</h3>
 		
-		<li>FULANO DA SILVA</li>
-		<li>FULANO DA SILVA</li>
-		<li>FULANO DA SILVA</li>
+		<li>Victor Ryan Silva Araujo</li>
+		<li>Maurício Alves Lima</li>
         
 		<br>
 
