--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         
 		<br>
 
-        <a href="1">Atividade 01 - Aguardando... </a> <br>
+        <a href="01">Atividade 01 - JavaScript</a> <br>
         <a href="02">Atividade 02 - Aguardando...</a>  <br>
         <a href="03">Atividade 03 - Aguardando...</a> <br>
     </div>
