--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
         
 		<br>
 
-        <a href="01">Atividade 01 - JavaScript</a> <br>
-        <a href="02">Atividade 02 - Aguardando...</a>  <br>
+        <a href="01">Atividade 01 - Introdução  a JavaScript</a> <br>
+        <a href="02">Atividade 02 - Exercício JavaScript</a>  <br>
         <a href="03">Atividade 03 - Aguardando...</a> <br>
     </div>
 
