--- a/01/index.html
+++ b/01/index.html
@@ -6,13 +6,13 @@
     <title>JavaScript</title>
 
     <script type="text/javascript">
-        function minhafuncao(arg)
+        function minhafuncao(arg1,arg2)
         {
-            var raiz = Math.sqrt(arg);
+            var soma = arg1 + arg2;
 
-            var msg = 'A raiz de ' + arg + ' é ' + raiz ;
+            var msg = 'A soma é igual a: ';
 
-            alert(msg);
+            alert(msg + soma);
         }
         function escreve(arg)
         {
@@ -23,12 +23,8 @@
 <body>
     <h1>Java Script</h1>
     <hr>
-    <button onclick="minhafuncao(25)">Clique</button>
+    <button onclick="minhafuncao(10,20)">Clique</button>
     <br><br>
-    <button onclick="minhafuncao(36)">Clique</button>
-    <br><br>
-    <button onclick="minhafuncao(48)">Clique</button>
-    <br><br>
-    
+    <button onclick="escreve('<h1>PROGRAMAÇÃO WEB</h1>')">Escreve</button>
 </body>
 </html>
