--- a/02/index.html
+++ b/02/index.html
@@ -23,11 +23,11 @@
 <body>
     <h1>Java Script</h1>
     <hr>
-    <button onclick="minhafuncao(25)">Clique</button>
+    <button onclick="minhafuncao(25)">Raiz de 25: </button>
     <br><br>
-    <button onclick="minhafuncao(36)">Clique</button>
+    <button onclick="minhafuncao(36)">Raiz de 36: </button>
     <br><br>
-    <button onclick="minhafuncao(49)">Clique</button>
+    <button onclick="minhafuncao(49)">Raiz de 49: </button>
     <br><br>
 
 
