--- a/02/index.html
+++ b/02/index.html
@@ -10,7 +10,7 @@
         {
             var raiz = Math.sqrt(arg);
 
-            var msg = 'A raiz de: '+ arg +' é '+ raiz;
+            var msg = 'A raiz de '+ arg +' é '+ raiz;
 
             alert(msg);
         }
@@ -23,11 +23,11 @@
 <body>
     <h1>Java Script</h1>
     <hr>
-    <button onclick="minhafuncao(25)">Raiz de 25: </button>
+    <button onclick="minhafuncao(25)">Raiz de 25 </button>
     <br><br>
-    <button onclick="minhafuncao(36)">Raiz de 36: </button>
+    <button onclick="minhafuncao(36)">Raiz de 36 </button>
     <br><br>
-    <button onclick="minhafuncao(49)">Raiz de 49: </button>
+    <button onclick="minhafuncao(49)">Raiz de 49 </button>
     <br><br>
 
 
