--- a/02/index.html
+++ b/02/index.html
@@ -21,7 +21,7 @@
     </script>
 </head>
 <body>
-    <h1>Java Script</h1>
+    <h1>Raiz Quadrada</h1>
     <hr>
     <button onclick="minhafuncao(25)">Raiz de 25 </button>
     <br><br>
