--- a/02/index.html
+++ b/02/index.html
@@ -35,6 +35,6 @@
     <hr>
     <h1>Escrevendo Na Div</h1>
     <button onclick="escrevediv('<h1>Programação web</h1>')">Escrever</button><br></br>
-    
+    <div id="minhadiv"></div>
 
 </html>
