--- a/02/index.html
+++ b/02/index.html
@@ -26,10 +26,13 @@
             document.getElementById("minhadiv2").innerHTML = texto;
         }
         function desafio1(){
-            texto = prompt('Digite um número');
-            document.getElementById("desafio2").innerHTML = texto;
-
+            num = prompt('Digite um número');
             
+            seq = 0
+            while seq != num:
+             seq += 1
+            
+             document.getElementById("desafio2").innerHTML = seq;
         }
     </script>
 </head>
