--- a/02/index.html
+++ b/02/index.html
@@ -29,10 +29,10 @@
             num = prompt('Digite um número');
             
             seq = 0
-            while seq != num:
-             seq += 1
-            
-             document.getElementById("desafio2").innerHTML = seq;
+            while seq != num{
+            seq += 1
+            document.getElementById("desafio2").innerHTML = seq;
+            }
         }
     </script>
 </head>
