--- a/02/index.html
+++ b/02/index.html
@@ -58,6 +58,7 @@
     <hr>
 
     <h1>Desafio</h1>
+    <h8>NÃO USAMOS CHAT GPT</h8>
     <button onclick="desafio1()">Escreva um numero</button><br></br>
     <div id="desafio2"></div>
 
