--- a/02/index.html
+++ b/02/index.html
@@ -26,13 +26,9 @@
             document.getElementById("minhadiv2").innerHTML = texto;
         }
         function desafio1(){
-            num = prompt('Digite um número');
+        num = prompt('Digite um número');
+        document.getElementById("desafio2").innerHTML = num;
             
-            seq = 0
-            while seq != num{
-            seq += 1
-            document.getElementById("desafio2").innerHTML = seq;
-            }
         }
     </script>
 </head>
