--- a/02/index.html
+++ b/02/index.html
@@ -26,12 +26,7 @@
         }
         function desafio1(){
         num = prompt('Digite um número');
-            seq = 0
-            while not(seq = num){
-                seq += 1
-                document.getElementById("desafio2").innerHTML = seq;
-            }
-         
+        document.getElementById("desafio2").innerHTML = num;
             
         }
     </script>
