--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
         <a href="01">Atividade 01 - Introdução  a JavaScript</a> <br>
         <a href="02">Atividade 02 - Exercício JavaScript</a>  <br>
-        <a href="03">Atividade 03 - Aguardando...</a> <br>
+        <a href="03">Atividade 03 - Arrays em JavaScript</a> <br>
     </div>
 
 </body>
