--- a/03/index.html
+++ b/03/index.html
@@ -40,7 +40,7 @@
         let frutas = Array();
 
         frutas[0] = 'Manga';
-        frutas[1] = 'Péra';
+        frutas[1] = 'Pera';
         frutas[2] = 'Maçã';
         frutas[3] = 'Melancia';
         frutas[4] = 'Uva';
@@ -75,10 +75,6 @@
 
     <button onclick="posicaoLinguagens()">Posição no Array</button>
 
-    
-
-
-    
     <div id="minhaDiv"></div>
 
     <hr>
