--- a/02/index.html
+++ b/02/index.html
@@ -24,11 +24,24 @@
             texto = prompt('Digite um texto qualquer');
             document.getElementById("minhadiv2").innerHTML = texto;
         }
-        function desafio1(){
-        num = prompt('Digite um número');
-        document.getElementById("desafio2").innerHTML = num;
-            
+        function desafio1() {
+
+            var n = parseInt(prompt("Digite o valor de N:"));
+
+            if (isNaN(n) || n <= 0) {
+                alert("Por favor, insira um número válido maior que zero.");
+                return;
+            }
+
+            var div = document.getElementById("desafio2");
+
+            div.innerHTML = "";
+
+            for (var i = 1; i <= n; i++) {
+                div.innerHTML += i + "<br>";
+            }
         }
+        
     </script>
 </head>
 <body>
