--- a/index.html
+++ b/index.html
@@ -30,18 +30,7 @@
             max-width: 700px;
 			text-align:left;
         }
-
-		.container: hover{
-            text-align: center;
-            background-color: white;
-            padding: 40px;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            width: 90%;
-            max-width: 700px;
-			text-align:left;
-		}
-
+        
         /* Títulos */
         h1 {
             font-size: 2.5rem;
@@ -88,6 +77,7 @@
         <a href="01">Atividade 01 - Introdução  a JavaScript</a> <br>
         <a href="02">Atividade 02 - Exercício JavaScript</a>  <br>
         <a href="03">Atividade 03 - Arrays em JavaScript</a> <br>
+        <a href="04">Atividade 04 - Array: Métodos push e pop</a>
     </div>
 
 </body>
