--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <a href="01">Atividade 01 - Introdução  a JavaScript</a> <br>
         <a href="02">Atividade 02 - Exercício JavaScript</a>  <br>
         <a href="03">Atividade 03 - Arrays em JavaScript</a> <br>
-        <a href="04">Atividade 04 - Array: Métodos push e pop</a>
+        <a href="04">Atividade 04 - Array: Métodos push e pop</a> <br>
         <a href="05">Atividade 05 - Lista de livros</a>
     </div>
 
