--- a/06/index.html
+++ b/06/index.html
@@ -18,13 +18,14 @@
       const corpo = document.getElementById('tabelaCorpo');
       corpo.innerHTML = ''; // limpa o corpo da tabela
 
-      for (let i = 0; i < pilhaPessoas.length; i++) {
-        const pessoa = pilhaPessoas[i];
+      for (let i = 0; i < pilhaCurso.length; i++) {
+        const pessoa = pilhaCurso[i];
 		const linha =
 		  "<tr>" +
 			"<td>" + i + "</td>" +
 			"<td>" + pessoa.nome + "</td>" +
-			"<td>" + pessoa.contato + "</td>" +
+			"<td>" + pessoa.regime + "</td>" +
+      "<td>" + pessoa.carga + "</td>" +
 			"<td>" +
 				"<div class='mt-3 d-flex gap-2'>" +
 				  "<button class='btn btn-secondary' onclick='editarContato(" + i + ")'>Editar</button>" +
@@ -38,76 +39,84 @@
 
 	
 	function limpaCampos() {
-	  document.getElementById('nome').value = '';
-      document.getElementById('contato').value = '';
+	    document.getElementById('nome').value = '';
+      document.getElementById('regime').value = '';
+      document.getElementById('carga').value = '';
 	}
 
 
     function posicao() {
       const indice = Number(prompt('Qual posição da lista deseja consultar?'));
 
-      if (indice < 0 || indice >= pilhaPessoas.length) {
+      if (indice < 0 || indice >= pilhaCurso.length) {
         alert('Posição inválida!');
         return;
       }
 
-      const pessoa = pilhaPessoas[indice];
-      alert('Na posição ' + indice + ' está: Nome: ' + pessoa.nome + ' - Contato: ' + pessoa.contato);
+      const curso = pilhaCurso[indice];
+      alert('Na posição ' + indice + ' está: Nome: ' + curso.nome + ' - Regime: ' + curso.regime + '- Carga Horária: ' + curso.carga);
     }
 
     function limparLista() {
-      pilhaPessoas = [];
+      pilhaCurso = [];
       mostrarLista();
     }
 
     function remover() {
-      if (pilhaPessoas.length === 0) {
+      if (pilhaCurso.length === 0) {
         alert('A pilha está vazia!');
       } else {
-        const removido = pilhaPessoas.pop();
-        alert('Removido: ' + removido.nome + ' - ' + removido.contato);
+        const removido = pilhaCurso.pop();
+        alert('Removido: ' + removido.nome + ' - ' + removido.regime + ' - ' + removido.carga );
         mostrarLista();
       }
     }
 
     function inverterPilha() {
-      pilhaPessoas.reverse();
+      pilhaCurso.reverse();
       mostrarLista();
     }
 	
 
 	function salvar() {
-        const nome = document.getElementById('nome').value.trim();
-        const contato = document.getElementById('contato').value.trim();
-        if (indiceEdicao === null) {
-            // Adicionando novo
-        pilhaPessoas.push({ nome, contato });
-        } else {
-            // Editando existente
-        pilhaPessoas [indiceEdicao] = { nome, contato };
-        indiceEdicao = null; // reseta o modo de edição
-        }
-            // Limpa o formulário
-        document.getElementById('nome').value = '';
-        document.getElementById('contato').value = '';
-        mostrarLista();
+    const nome = document.getElementById('nome').value.trim();
+    const regime = document.getElementById('regime').value.trim();
+    const carga = document.getElementById('carga').value.trim();
+    if (regime === 'Selecione...' || nome === ''|| carga === '' || isNaN(carga)){
+        alert('Por favor, coloque valores válidos!')
+        return;
+      }
+    if (indiceEdicao === null) {
+      pilhaCurso.push({ nome, regime, carga });
+    } 
+    else {
+      pilhaCurso [indiceEdicao] = { nome, regime, carga };
+      indiceEdicao = null;
     }
+    document.getElementById('nome').value = '';
+    document.getElementById('regime').value = '';
+    document.getElementById('carga').value = '';
+    mostrarLista();
+  }
+    
+  
 
    function editarContato(indice) {
-        const pessoa = pilhaPessoas [indice];
-        document.getElementById('nome').value = pessoa.nome;
-        document.getElementById('contato').value = pessoa.contato;
-            indiceEdicao = indice; // marca qual está sendo editado
+    const curso = pilhaCurso [indice];
+    document.getElementById('nome').value = curso.nome;
+    document.getElementById('regime').value = curso.regime;
+    document.getElementById('carga').value = curso.carga;
+    indiceEdicao = indice; // marca qual está sendo editado
     }
 	
 	function removerContato(indice) {
-        if (pilhaPessoas.length === 0) {
-        alert('A pilha está vazia!');
-      } else {
-        const removido = pilhaPessoas.pop();
-        alert('Removido: ' + removido.nome + ' - ' + removido.contato);
-        mostrarLista();
-      }
+    if (pilhaCurso.length === 0) {
+      alert('A pilha está vazia!');
+    } else {
+      const removido = pilhaCurso.pop();
+      alert('Removido: ' + removido.nome + ' - ' + removido.regime + ' - ' + removido.carga);
+      mostrarLista();
+    }
       // implementar a função remover a partir de um indice
     }	
 	
@@ -124,14 +133,14 @@
 	<div class="card p-4 shadow-sm">
       <div class="row g-3">
 	  
-        <div class="col-md-5">
+        <div class="col-md-4">
           <label class="form-label">Nome do curso</label>
           <input type="text" id="nome" class="form-control" placeholder="Digite o nome">
         </div>
 
         <div class="form-group col-md-4">
             <label class="form-label">Regime</label>
-            <select id="contato" class="form-control">
+            <select id="regime" class="form-control">
                 <option selected>Selecione...</option>
                 <option>Médio</option>
                 <option>Superior</option>
@@ -169,8 +178,9 @@
         <tr>
           <th>#</th>
           <th>Nome</th>
-          <th>Contato</th>
-		   <th>Ações</th>
+          <th>Regime</th>
+          <th>Carga Horária</th>
+		      <th>Ações</th>
         </tr>
       </thead>
       <tbody id="tabelaCorpo">
