Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <a href="02">Atividade 02 - Exercício JavaScript</a>  <br>
         <a href="03">Atividade 03 - Arrays em JavaScript</a> <br>
         <a href="04">Atividade 04 - Array: Métodos push e pop</a> <br>
-        <a href="05">Atividade 05 - Lista de livros</a>
+        <a href="05">Atividade 05 - Lista de livros</a> <br>
         <a href="06">Atividade 06 - JavaScript e Framework Bootstrap</a>
     </div>
 
