--- a/06/index.html
+++ b/06/index.html
@@ -28,7 +28,7 @@
       "<td>" + pessoa.carga + "</td>" +
 			"<td>" +
 				"<div class='mt-3 d-flex gap-2'>" +
-				  "<button class='btn btn-secondary' onclick='editarContato(" + i + ")'>Editar</button>" +
+				  "<button class='btn btn-primary' onclick='editarContato(" + i + ")'>Editar</button>" +
 				  "<button class='btn btn-danger' onclick='removerContato(" + i + ")'>Remover</button>" +
 				"</div>" +
 			"</td>" +
@@ -155,7 +155,7 @@
 
 
         <div class="col-md-4">
-            <button class="btn btn-secondary" onclick="salvar()">Salvar</button>
+            <button class="btn btn-primary" onclick="salvar()">Salvar</button>
 
         </div>
 	  
@@ -165,10 +165,10 @@
 	
 	<hr>
 
-    <button class="btn btn-secondary" onclick="posicao()">Posição</button>
+    <button class="btn btn-primary" onclick="posicao()">Posição</button>
     <button class="btn btn-danger" onclick="remover()">Remover Último</button>
     <button class="btn btn-danger" onclick="limparLista()">Limpar Lista</button>
-    <button class="btn btn-secondary" onclick="inverterPilha()">Inverter</button>
+    <button class="btn btn-primary" onclick="inverterPilha()">Inverter</button>
 
     <br><br>
   
