--- a/06/index.html
+++ b/06/index.html
@@ -29,7 +29,7 @@
 			"<td>" +
 				"<div class='mt-3 d-flex gap-2'>" +
 				  "<button class='btn btn-primary' onclick='editarContato(" + i + ")'>Editar</button>" +
-				  "<button class='btn btn-danger' onclick='removerContato(" + i + ")'>Remover</button>" +
+				  "<button class='btn btn-secondary' onclick='removerContato(" + i + ")'>Remover</button>" +
 				"</div>" +
 			"</td>" +
 		  "</tr>";
@@ -166,8 +166,8 @@
 	<hr>
 
     <button class="btn btn-primary" onclick="posicao()">Posição</button>
-    <button class="btn btn-danger" onclick="remover()">Remover Último</button>
-    <button class="btn btn-danger" onclick="limparLista()">Limpar Lista</button>
+    <button class="btn btn-secondary" onclick="remover()">Remover Último</button>
+    <button class="btn btn-secondary" onclick="limparLista()">Limpar Lista</button>
     <button class="btn btn-primary" onclick="inverterPilha()">Inverter</button>
 
     <br><br>
